Changes for 3.0.3rc1

New features:
A.F....... [ZBX-1357] enabled Chinese (China) translation to be displayed by default (zalex_ua)
A.F....... [ZBX-1357] updated Chinese (China), French, Italian, Korean, Polish, Portuguese (Brazil), Russian, Spanish, Ukrainian translations; thanks to Zabbix translators (zalex_ua)

Bug fixes:
..F....... [ZBX-10686] updated success and error messages for triggers, items and graphs 'Copy' operations (Cemeris)
A......... [ZBX-10693] fixed API configuration.import method for importing template and/or host with trigger prototype dependency (Cemeris)
A.FG...PS. [ZBXNEXT-1263] added finishing touches to encryption support (Andris, asaveljevs, gleb, Oleg, Sandis)
.......PS. [ZBX-10540] fixed encoding reset when Zabbix process auto-reconnects MySQL database (gleb)
..F....... [ZBX-10670] fixed disabling of script confirmation in Administration -> Script -> Edit form (Cemeris)
..F....... [ZBX-10670] fixed display of form fields for different types of script in Administration -> Script -> Edit form (Cemeris)
..F....... [ZBX-9968] fixed monitoring discovery and monitoring map data refresh (Gunars)
...G...... [ZBX-10548] fixed agent compilation on Solaris without zone support (e.g. Solaris 9), added awareness of running on a newer Solaris with zones (Andris)
..F....... [ZBX-10639] changed incorrect labels in item filters and host filters (Cemeris)
..F....... [ZBX-10668] added hint for action operation steps on how to proceed infinitely (Cemeris)
........S. [ZBX-10674] prohibited 'band' operator for counting float values (gleb)
........S. [ZBX-10658] fixed count() evaluation for numeric values with operator and empty pattern (gleb)
........S. [ZBX-10551] fixed possible crash when constants are extracted from invalid trigger expression containing '{' without matching '}' (gleb)
..F....... [ZBX-10646] fixed adding trigger prototype dependencies when cloning a host or template (Ivo)